# seckill-system

./: .gitignore  CMakeLists.txt  catch_collision.py  seckill_post.lua  seckill_v4.lua  spawn_clients.sh  test_flash_verify.py  test_sse_debug.py  test_sse_socket.py
build_asan/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/: Findhiredis.cmake  Findlibuv.cmake
config/: config.yaml  config_9000.yaml  config_9010.yaml  config_9020.yaml
include/common/: config.h  globals.h  logger.h  metrics.h  snowflake.h
include/handler/: health_handler.h  metrics_handler.h  order_handler.h  seckill_handler.h  sse_handler.h
include/mq/: IMessageQueue.h
include/server/: http_server.h
include/service/: activity_manager.h  async_redis_executor.h  mysql_pool.h  mysql_service.h  order_processor.h  prepared_statement.h  rate_limiter.h  redis_service.h  timeout_checker.h
lua/: random_seckill.lua  seckill.lua
scripts/: init_db.sql
src/: main.cpp  main.cpp.bak  main.cpp.bak.20260417232345  main.cpp.bak2  main_test.cpp
src/common/: config.cpp  logger.cpp  metrics.cpp  snowflake.cpp
src/handler/: admin_handler.cpp  health_handler.cpp  metrics_handler.cpp  order_handler.cpp  seckill_handler.cpp  seckill_handler.cpp.bak  seckill_handler.cpp.bak.20260417232345  sse_handler.cpp
src/mq/: RedisStreamMQ.cpp
src/server/: http_server.cpp
src/service/: activity_manager.cpp  mysql_service.cpp  order_processor.cpp  rate_limiter.cpp  redis_service.cpp  redis_service.cpp.bak  redis_service.cpp.bak.20260417232345  timeout_checker.cpp
web/admin/: index.html
web/seckill/: index.html
